test/parser.d/invalid/match1.surc.bad
match1(dox: Integer): Integer = match 4
7 -> 7
